# sera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/shaders/: compile.bat  triangle.vert
Scripts/: build.bat  run.bat  setup.bat
Sera/: CMakeLists.txt
Sera/include/Sera/: Application.h  EntryPoint.h  Image.h  Layer.h  Log.h  Random.h  Timer.h  Window.h
Sera/include/Sera/Backend/: VulkanDebug.h  VulkanDevice.h  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanRenderPipeline.h  VulkanRenderpass.h  VulkanSwapchain.h
Sera/include/Sera/Input/: Input.h  KeyCodes.h
Sera/src/: Application.cpp  Image.cpp  Log.cpp  Random.cpp  Window.cpp  imgui_demo.cpp
Sera/src/Backend/: VulkanDebug.cpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanRenderPass.cpp  VulkanRenderPipeline.cpp  VulkanSwapchain.cpp
Sera/src/Input/: Input.cpp
SeraApp/: CMakeLists.txt
SeraApp/src/: Application.cpp
cmake/: utils.cmake
